kubernetes/apps/finance/finance/app/frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: finance-frontend
  name: finance-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finance-frontend
  template:
    metadata:
      labels:
        app: finance-frontend
    spec:
      containers:
        - env:
            - name: BACKEND_URL
              value: https://financeq.${SECRET_DOMAIN}
            - name: KEYCLOAK_CLIENT_ID
              value: finance-frontend
            - name: KEYCLOAK_REALM
              value: finance
            - name: KEYCLOAK_URL
              value: https://keycloak.${SECRET_DOMAIN}
          image: registry.gitlab.com/antoncuranz/financeionic
          name: finance-frontend
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: gitlab-token
