kubernetes/apps/finance/finance/app/frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: finance-frontend-service
  namespace: finance
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: finance-frontend
