kubernetes/apps/finance/finance/app/backend-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finance-backend-ingress
  namespace: finance
  annotations:
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "financeq.${SECRET_DOMAIN}"
  rules:
    - host: "financeq.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finance-backend-service
                port:
                  number: 8080
