kubernetes/apps/finance/finance/app/backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: finance-backend-service
  namespace: finance
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    matchLabels:
      app: finance-backend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finance-backend-ingress
  namespace: finance
  annotations:
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "financeq.${SECRET_DOMAIN}"
  rules:
    - host: "financeq.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finance-backend-service
                port:
                  number: 8080
