kubernetes/apps/finance/finance/app/frontend-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finance-frontend-ingress
  namespace: finance
  annotations:
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "finance.${SECRET_DOMAIN}"
  rules:
    - host: "finance.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finance-frontend-service
                port:
                  number: 80
